CuBoulder/tiamat-theme#1413 Fixes vertical alignment of radio buttons

--- a/css/ucb-search-box.css
+++ b/css/ucb-search-box.css
@@ -31,8 +31,10 @@
 }
 
 .ucb-search-box .ucb-search-box-options label,
+.ucb-search-box .ucb-search-box-options input,
 .ucb-search-box .ucb-search-input-submit input {
   display: inline-block;
+  vertical-align: middle;
   font-size: .9em;
   font-weight: bold;
 }
